# cpfloat-linalg

./: .gitignore  CMakeLists.txt  README.md
examples/: basic.cpp
include/: linalg_check.hpp  linalg_core.hpp  linalg_scalar.hpp  linalg_vec.hpp  linalg_vector.hpp
src/: linalg_core.cpp
tests/: basic.cpp  linalg_check_test.cpp  linalg_core_test.cpp  linalg_scalar_test.cpp  linalg_vec_test.cpp
